--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -273,6 +273,8 @@ Montsioa's ?</p>
 
 <!-- page break-->
 
+<fw class="center">38</fw>
+
 <p><em>Sebeli</em>.—A stem-buck cannot protect itself, but God protects it and lets it live.</p>
 
 <p><em>Sir C. Warren</em>.—Was it the same with you when you came here as refugees fleeing
@@ -289,10 +291,68 @@ strong enough to protect themselves ?</p>
 <p><em>Sir C. Warren</em>—Supposing we leave here to-day, and to-morrow the Bakwena cattle
 are all swept away, what then ?</p> 
 
-<p><em>Scheli</em>.— I have spoken of myself. There are others—Bakwena—who will now speak,
+<p><em>Sebeli</em>.— I have spoken of myself. There are others—Bakwena—who will now speak,
 but for myself I want no protetion.</p>
 
-<p><em>Kosi Lintse</em>, the King's brother. (To Sir C. Warren.) We hear you bring news which</p>
+<p><em>Kosi Lintse</em>, the King's brother. (To Sir C. Warren.) We hear you bring news which
+is familiar to our cars. You say we were attacked by the Boers. They did attack us
+when Livingstone was here. I asked him to go and find out what they wanted. He
+said, "They will certainly attack you, so you must get guns and defend yourselves ;" and
+they did attack us. After, my elder brother said, “I can see no good in the black people; "I will go and make known our case to the Queen ;  you can stay in the town while I am
+away." He went away to the Cape (Cape Town), and when he came back he told us
+he had been unable to do anything there, and had not had the opportunity of approaching
+the Queen. But the Queen's people had been kind to him, and given him money, and
+he told us we must send the ivory we had killed while he was away to the people who
+had been kind to him. So we lived on, and by and by the Doctor (Livingstone) went
+along up country, leaving us and my brother. Sechele said he was in favour of being
+friendly with the English, and letting them teach his people, but that the Boers had
+managed to get Livingstone sent away, and SO he would have to get another missionary.
+So a German missionary came, and soon a letter came from Moffat to ask about his
+garden he bad made amongst us. I saw he was not speaking falsely, and said the German
+ought to go away, and the Englishman came back and shortly this happened. I am
+speaking ou behalf of Schele, not of Sebeli. I say that we have all along depended on
+the English. I for my part did not know there was such a thing as a boundary line
+then; but one day I heard Sechele say he wanted to put the country right as to the
+boundary line, and through this Englishman he sent word to the Boers at Zeerust.
+Then came a man called Melvill, and Sechele said to him, "Now let the country which
+belongs to the Bakwena be known and separated from the country of the Boers."
+When Melvill went away a message came from Pretoria from Shepstone. The letter said, 
+"Quena, I have received a letter from Lentshwe (of the Bakalla), in which he says I am
+killed by Sechele, he is taking me to account for my country. I say the country
+belongs to you white people." Sechele sent a message to Pretoria to answer this
+letter, and say that if Lentshwe was not in his country, let some one be sent up to make
+sure and lay down the boundary. The answer came, "Yes, Melvill will come." And
+Melvill came. He said, "I have come to settle the boundary line ; and Sechele sent
+me and his son to meet Lentshwe. Melvill told us that the Englishman ruling at
+Pretoria had said we had better widen our country out towards the west, and a boundary
+will be put down which will never be interfered with by anybody. So they went and
+laid the line down by the Marico River to the north; and I, Kosi Lintse, am of opinion
+that Sechele became an Englishman from that time. First he said he did not see any
+good in a black man, and then he agreed to widen his country out westward at the
+Englishman's request. From these two acts I say he became an Englishman, and now
+when you talk of another boundary, and I find the old one inside it, and it is all right
+so far as I am concerned. If you were beginning a new thing my heart would be afraid ;
+but if you talk of protection, inasmuch as that is what we have been long waiting for,
+from the time we were attacked by the Boers, I, the Makwana, say, "Yes, that is what
+we always wanted." I hear nothing you have said to-day to make my heart sore.
+I hear merely the words which we asked for in the olden time.</p>
+
+<p><em>General Warren</em>.—When the Kosi talks of protection against the Boers, what does
+he mean ?</p>
+
+<p><em>Kosi Lintse</em>—I mean the Boers under Paul Kruger and Piet Scholtz.</p>
+
+<p><em>General Warren</em>.—Does he mean the Transvaal Government, or people coming from
+  the Transvaal though not under it ?</p>
+
+<p><em>Kosi Linise</em>.—I did not know they had a Government at that time. We were very
+poor, and used to exchange ivory for cattle. A man named Hendrich Potgieter came
+to buy ivory. We were told he was the Boer chief. I have no more to say, but that I
+feel assured I am an Englishman.</p>
+
+<!-- page break-->
+
+
 
 <!-- page 1 --> <!--
 36
