--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -121,6 +121,7 @@ Sechele, and Khame, and their proposals as to the future of their territories.</
 <hr class="milestone halfline quarterline center">
 
 <p class="center noindent">A.</p>
+
 <p class="center noindent halfbottommargin">R<span class="small">ESULT OF</span> I<span class="small">NTERVIEW</span> between Sir C<span class="small">HARLES</span> W<span class="small">ARREN</span>, Her Britannic Majesty's Special
 Commissioner, and the Chief G<span class="small">HASITSIVE</span>, April 24, 1885.</p>
 <p>There were present Ghasitsive, his son Bathoen, and several councillors.</p>
@@ -454,18 +455,14 @@ heard you had come to do. Right Mankoroane, Montsioa, and your own countryman
 Bethell.</p>
 <p><em>Sir C. Warren</em>.—I have a letter from the Chief in which he informs me that one of
 his waggons is taken from him by the Boers. Now I come to see about these things, he
-says to me, Go and settle other things first. I don't know what this means.
-</p>
+says to me, Go and settle other things first. I don't know what this means.</p>
 <p><em>Sechele</em>.— I do not know what Walker (who wrote the letter) put in it.</p>
-<p>
-<em>Sir C. Warren</em>.—Then am I to suppose that the letters I received from him are not
+<p><em>Sir C. Warren</em>.—Then am I to suppose that the letters I received from him are not
 really the Chief's words ?</p>
 <p><em>Sechele</em>.—I am not aware of having entered into any long correspondence about such
-a matter as the waggon.
-</p>
+a matter as the waggon.</p>
 <p><em>Sir C. Warren</em> reads Mr. Upington's letter to Sechele aud his reply.</p>
-<p>
-<em>Sechele</em>.—Yes, I know these letters. I meant in that letter that I wished to be under
+<p><em>Sechele</em>.—Yes, I know these letters. I meant in that letter that I wished to be under
 the Queen, not that man Upington. But now that the Queen has taken the step of
 establishing the Protectorate, and you come up here, I have nothing to see but words for
 this Protectorate, not deeds. You have left the great matter behind you apparently
@@ -483,11 +480,9 @@ I have spoken and wait an answer.</p>
 Queen.</p>
 <p><em>Sechele</em>.—I wish to say I have always been in favour of the English Government, but
 you have come to me prematurely. Go back and do the work you have in hand, and
-then we shall see the benefit of a Protectorate.
-</p>
+then we shall see the benefit of a Protectorate.</p>
 <p><em>Sir C Warren</em>.—The Chief has spoken well.</p>
-<p><em>Sechele</em>.—What do you think will happen now ?</p>
-<p>
+<p><em>Sechele</em>.—What do you think will happen now ?</p><p>
 <em>Sir C. Warren</em>.—I cannot tell. Can I look into the future ? But suppose a Boer
 commando comes down to-morrow, and sweeps away your cattle, what then ?</p>
 <p><em>Sechele</em>.—Have you a commando ready that you say this ? Is there one close to this
@@ -495,52 +490,57 @@ camp to play off against me directly you go away. In any case, are we not in the
 
 <p class="center noindent"><span class="left leftmargin smallest">A 17830.</span> <span class="center">F</span></p>
 
-<!-- 7 --> <!--
-42
-tent ? Am I not within the bounds of the Protectorate? I know it is established but
+<!-- page break -->
+
+<fw class="center halfbottommargin">42</fw>
+
+<p>tent ? Am I not within the bounds of the Protectorate? I know it is established but
 as to the numerous questions springing out of it, I wish to leave them all till we see how
-you carry on your protection in the South.
-C.
-P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>.
-Molepolole, 28th April 1885.
-At a meeting of Bakwena with Sir Charles Warren, messenger of the Queen of
-England, he made known to us the pleasure of the Queen to establish a 
+you carry on your protection in the South.</p>
+
+<p class="center noindent">C.</p>
+
+<p>P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>.
+Molepolole, 28th April 1885.</p>
+<p>At a meeting of Bakwena with Sir Charles Warren, messenger of the Queen of
+England, he made known to us the pleasure of the Queen to establish a
 Protectorate in these lands, and showed us the boundaries of the Protectorate ; and our
 decision is to express our thanks for the Protectorate in which we are included. But
 we wish to see how the Queen's Protectorate will help the other Chiefs which are included
 in it, namely, Mankoroane, Montsioa, and Ghasitsive. Should we find that they are
 well protected by the Queen, we also shall then be agreeable and without a word of
-dispute.
+dispute.</p>
 (Signed) S<span class="small">ECHELE</span>.
 Witnesses K<span class="small">GARI</span>.
 (Signed) F<span class="small">RED</span>. W. W<span class="small">ALKER</span>, K<span class="small">GOSIDINTSI</span>.
 ( ,, ) G<span class="small">EO</span>. G<span class="small">RAY</span>. S<span class="small">EBELE</span>.
-I certify that the foregoing was written by Kgari, son of Sechele. The signatures
+<p>I certify that the foregoing was written by Kgari, son of Sechele. The signatures
 were also written by him by direction of Sechele, Sebele, and Kgosidentse.
-Done before me on this 28th day of April 1885.
+Done before me on this 28th day of April 1885.</p>
 (Signed) S. H. E<span class="small">DWARDS</span>,
 Major.
 
-D.
+<p class="center noindent">D.</p>
+
 Chief S<span class="small">ECHELE</span> to S<span class="small">IR</span> C. W<span class="small">ARREN</span>.
 Sir, Molepolole, 28th April 1885.
-The Chief Sechele has requested us to write and inform you that he has received
+<p>The Chief Sechele has requested us to write and inform you that he has received
 news from Bamangwato, viz., that the Matabele tribe are on the road to make war with
 Khama, Chief of Bamangwato. He also hears that a large party of Boers are preparing
 to trek westward, and in the event of their not being able to take the Bamangwato road,
 they intend coming through my country. He says his traders have but little ammunition
 on hand, and trusts you will not leave him without presenting him with means to defend
-his country.
+his country.</p>
 We have, &amp;c.,
 (Signed) B<span class="small">OYNE</span>, G<span class="small">RAY</span>, and W<span class="small">ALKER</span> (for
 S<span class="small">ECHELE</span>.)
 
-E.
+<p class="center noindent">E.</p>
 
-MEETING between S<span class="small">IR</span> C. W<span class="small">ARREN</span> and K<span class="small">HAMA</span>, Chief of the Bamangwato, with his
-Councillors, at Shoshong, 12th May 1885.
+<p>MEETING between S<span class="small">IR</span> C. W<span class="small">ARREN</span> and K<span class="small">HAMA</span>, Chief of the Bamangwato, with his
+Councillors, at Shoshong, 12th May 1885.</p>
 
-<em>Sir C. Warren</em>.—I have brought with me to-day a message from the Queen of
+<p><em>Sir C. Warren</em>.—I have brought with me to-day a message from the Queen of
 England, but before giving it I will preface it in a few words.
 You all know how in recent years difficulties have occurred in the country south of
 this. These difficulties have occurred from various causes, but the great reason has
@@ -554,10 +554,10 @@ those who assisted him. The same took place with Montsioa, and Moshette set hims
 up as a great Chief with territory extending far into Montsioa's ground, and he gave to
 those who assisted him the lands occupied by Montsioa. To add to the confusion, strong
 liquor had been introduced into these territories, and many of the rich people had
-acquired a longing for strong drink, and would sell all or anything they had to obtain
+acquired a longing for strong drink, and would sell all or anything they had to obtain</p>
 
 
---> <!-- 8 --> <!--
+<!-- 8 --> <!--
 43
 624
 it. First their oxen, then their karosses would go, and they would trump up their
