--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -72,7 +72,7 @@
 <fw class="center nomargintop halfbottommargin">36</fw>
 
 <p class="center noindent">No. 34.</p>
-<p class="center noindent">The R<span class="small">IGHT</span> H<span class="small">ON</span>. <span class="caps">SIR HERCULES ROBINSON</span>, G.C.M.G., to the R<span class="small">IGHT</span> H<span class="small">ON</span>.
+<p class="center noindent halfbottommargin">The R<span class="small">IGHT</span> H<span class="small">ON</span>. <span class="caps">SIR HERCULES ROBINSON</span>, G.C.M.G., to the R<span class="small">IGHT</span> H<span class="small">ON</span>.
 <span class="caps"><span class="small">THE</span> EARL OF DERBY</span>, K.G. &nbsp;&nbsp;&nbsp; (Received July 15, 1885.)</p>
 <p class="noindent">M<span class="small">Y</span> <span class="caps">L<span class="small">ORD</span></span>, <span class="right right1">Government House, Capetown, June 24, 1885.</span></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I <span class="small">HAVE</span> the honour to enclose, for your information, a copy of a despatch which
@@ -176,7 +176,7 @@ boots), and then he hires out his wife, and disease follows, and then death.</p>
 
 <p class="center noindent">B.</p>
 
-<p class="center noindent">I<span class="small">NTERVIEW BETWEEN</span> S<span class="small">IR</span> C. W<span class="small">ARREN</span> and the Chief S<span class="small">ECHELE</span> of Bakwena at Court
+<p class="center noindent halfbottommargin">I<span class="small">NTERVIEW BETWEEN</span> S<span class="small">IR</span> C. W<span class="small">ARREN</span> and the Chief S<span class="small">ECHELE</span> of Bakwena at Court
 Yard, Molepolole, April 27, 1885.</p>
 <p class="overhang">Present : Chief Sechele and his two sons Sebeli and Kari, Kosi Lintse Chief's brother,
 headmen and several hundred of the Bakwena tribe ; Sir Charles Warren, Mr. 
@@ -284,6 +284,7 @@ feel assured I am an Englishman.</p>
 <!-- page break-->
 
 <fw class="center halfbottommargin">39</fw>
+
 <p><em>Sir C. Warren</em>.—(To Sechele.) During the latter disturbance in Montsion' country,
 did you ever receive a communication from Nicholas Gey ?</p>
 <p><em>Sechele</em>.—I will speak now. I do not quite understand the exact object of your
@@ -494,14 +495,16 @@ camp to play off against me directly you go away. In any case, are we not in the
 
 <fw class="center halfbottommargin">42</fw>
 
-<p>tent ? Am I not within the bounds of the Protectorate? I know it is established but
+<p class="noindent">tent ? Am I not within the bounds of the Protectorate? I know it is established but
 as to the numerous questions springing out of it, I wish to leave them all till we see how
 you carry on your protection in the South.</p>
 
+<hr class="milestone halfline quarterline center">
+
 <p class="center noindent">C.</p>
 
-<p>P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>.
-Molepolole, 28th April 1885.</p>
+<p class=" center noindent">P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>.</p>
+<p class="right right1">Molepolole, 28th April 1885.</p>
 <p>At a meeting of Bakwena with Sir Charles Warren, messenger of the Queen of
 England, he made known to us the pleasure of the Queen to establish a
 Protectorate in these lands, and showed us the boundaries of the Protectorate ; and our
@@ -515,15 +518,17 @@ Witnesses K<span class="small">GARI</span>.
 (Signed) F<span class="small">RED</span>. W. W<span class="small">ALKER</span>, K<span class="small">GOSIDINTSI</span>.
 ( ,, ) G<span class="small">EO</span>. G<span class="small">RAY</span>. S<span class="small">EBELE</span>.
 <p>I certify that the foregoing was written by Kgari, son of Sechele. The signatures
-were also written by him by direction of Sechele, Sebele, and Kgosidentse.
-Done before me on this 28th day of April 1885.</p>
-(Signed) S. H. E<span class="small">DWARDS</span>,
-Major.
+were also written by him by direction of Sechele, Sebele, and Kgosidentse.</p>
+<p>Done before me on this 28th day of April 1885.</p>
+<p class="right right3">(Signed) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;S.H. E<span class="small">DWARDS</span>,</p>
+<p class="right right2">Major.</p>
+
+<hr class="milestone halfline quarterline center">
 
 <p class="center noindent">D.</p>
 
-Chief S<span class="small">ECHELE</span> to S<span class="small">IR</span> C. W<span class="small">ARREN</span>.
-Sir, Molepolole, 28th April 1885.
+<p class="center noindent halfbottommargin">Chief S<span class="small">ECHELE</span> to S<span class="small">IR</span> C. W<span class="small">ARREN</span>.</p>
+<p class="noindent">Sir, <span class="right right1">Molepolole, 28th April 1885.</span></p>
 <p>The Chief Sechele has requested us to write and inform you that he has received
 news from Bamangwato, viz., that the Matabele tribe are on the road to make war with
 Khama, Chief of Bamangwato. He also hears that a large party of Boers are preparing
@@ -531,18 +536,20 @@ to trek westward, and in the event of their not being able to take the Bamangwat
 they intend coming through my country. He says his traders have but little ammunition
 on hand, and trusts you will not leave him without presenting him with means to defend
 his country.</p>
-We have, &amp;c.,
-(Signed) B<span class="small">OYNE</span>, G<span class="small">RAY</span>, and W<span class="small">ALKER</span> (for
-S<span class="small">ECHELE</span>.)
+<p class="right right10">We have, &amp;c.,</p>
+<p class="right">(Signed) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;B<span class="small">OYNE</span>, G<span class="small">RAY</span>, and W<span class="small">ALKER</span> (for
+<br/><span class="right10">S<span class="small">ECHELE</span>.)</span>
+
+<hr class="milestone halfline quarterline center">
 
 <p class="center noindent">E.</p>
 
-<p>MEETING between S<span class="small">IR</span> C. W<span class="small">ARREN</span> and K<span class="small">HAMA</span>, Chief of the Bamangwato, with his
+<p class="center noindent halfbottommargin">MEETING between S<span class="small">IR</span> C. W<span class="small">ARREN</span> and K<span class="small">HAMA</span>, Chief of the Bamangwato, with his
 Councillors, at Shoshong, 12th May 1885.</p>
 
 <p><em>Sir C. Warren</em>.—I have brought with me to-day a message from the Queen of
-England, but before giving it I will preface it in a few words.
-You all know how in recent years difficulties have occurred in the country south of
+England, but before giving it I will preface it in a few words.</p>
+<p>You all know how in recent years difficulties have occurred in the country south of
 this. These difficulties have occurred from various causes, but the great reason has
 been that there has been no strong Government throughout. One of the difficulties
 down in the South was that there were rival claimants to the chieftainship. Mankoroane,
