--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -513,10 +513,34 @@ we wish to see how the Queen's Protectorate will help the other Chiefs which are
 in it, namely, Mankoroane, Montsioa, and Ghasitsive. Should we find that they are
 well protected by the Queen, we also shall then be agreeable and without a word of
 dispute.</p>
-(Signed) S<span class="small">ECHELE</span>.
-Witnesses K<span class="small">GARI</span>.
-(Signed) F<span class="small">RED</span>. W. W<span class="small">ALKER</span>, K<span class="small">GOSIDINTSI</span>.
-( ,, ) G<span class="small">EO</span>. G<span class="small">RAY</span>. S<span class="small">EBELE</span>.
+
+<div class="row liv_022004-1">
+  <div class="column">
+    <div class="item">&nbsp;</div>
+    <div class="item"><em>Witnesses</em></div>
+    <div class="item">(Signed)</div>
+    <div class="item">( ,, )</div>
+  </div>
+  <div class="column">
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">F<span class="small">RED</span>. W. W<span class="small">ALKER</span>,</div>
+    <div class="item">G<span class="small">EO</span>. G<span class="small">RAY</span>.</div>
+  </div>
+  <div class="column">
+    <div class="item">&nbsp;</div>
+  </div>
+  <div class="column">
+    <div class="item">(Signed)</div>
+  </div>
+  <div class="column">
+    <div class="item">S<span class="small">ECHELE</span>.</div>
+    <div class="item">K<span class="small">GARI</span>.</div>
+    <div class="item">K<span class="small">GOSIDINTSI</span>.</div>
+    <div class="item">S<span class="small">EBELE</span>.</div>
+  </div>
+</div>
+
 <p>I certify that the foregoing was written by Kgari, son of Sechele. The signatures
 were also written by him by direction of Sechele, Sebele, and Kgosidentse.</p>
 <p>Done before me on this 28th day of April 1885.</p>
